--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
             --exclude=node_modules \
             --exclude=.git \
             --exclude=.github \
+            --exclude=deploy.tar.gz \
             .
 
       - name: Prepare SSH key
