--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,9 @@ jobs:
           ARCHIVE="/home/minhhoa2/deploy.tar.gz"
           TARGET="/home/minhhoa2/minhhoang"
           STAGING="/home/minhhoa2/.deploy_tmp"
-          NODE_VENV="/home/minhhoa2/nodevenv/minhhoang/18/bin/activate"
+          NODE_PREFIX="/home/minhhoa2/nodevenv/minhhoang/18"
+          NODE_VENV="$NODE_PREFIX/bin/activate"
+          NPM_BIN="$NODE_PREFIX/bin/npm"
 
           rm -rf "$STAGING"
           mkdir -p "$STAGING"
@@ -68,12 +70,26 @@ jobs:
           if [ -f "$NODE_VENV" ]; then
             # Activate the cPanel-provided Node environment so npm uses the managed runtime
             . "$NODE_VENV"
+          elif [ -d "$NODE_PREFIX" ]; then
+            export PATH="$NODE_PREFIX/bin:$PATH"
+            echo "Warning: activate script missing, appended \$PATH manually." >&2
+          else
+            echo "Warning: Node.js virtual environment not found at \$NODE_PREFIX" >&2
           fi
 
           cd "$TARGET"
           export NODE_ENV=production
-          npm install --production --no-audit
-          npm run --if-present build
+          if command -v npm >/dev/null 2>&1; then
+            NPM_CMD="$(command -v npm)"
+          elif [ -x "$NPM_BIN" ]; then
+            NPM_CMD="$NPM_BIN"
+          else
+            echo "npm binary not found. Ensure Node.js app is set up in cPanel." >&2
+            exit 1
+          fi
+
+          "$NPM_CMD" install --production --no-audit
+          "$NPM_CMD" run --if-present build
 
           mkdir -p tmp
           touch tmp/restart.txt
