--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "myAPI",
   "version": "1.0.0",
   "description": "My First Node.js Api",
-  "main": "index.js",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cookie": "^0.5.0",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "express-device": "^0.4.2",
+    "express-device": "^0.4.1",
     "mysql": "^2.18.1",
-    "package.json": "^2.0.1",
+    "package.json": "^0.0.0",
     "request": "^2.88.2",
     "socket.io": "^4.6.1",
     "ws": "^8.2.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   },
   "author": "minhhoang",
   "license": "ISC"
