--- a/package.json
+++ b/package.json
@@ -8,16 +8,11 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "express-device": "^0.4.1",
-    "mysql": "^2.18.1",
-    "package.json": "^0.0.0",
-    "request": "^2.88.2",
-    "socket.io": "^4.6.1",
-    "ws": "^8.2.3"
+    "mongoose": "^8.3.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
